tests/neg/applied_constructor_types.check
-- [E006] Not Found Error: tests/neg/applied_constructor_types.scala:8:10 ----------------------------------------------
8 |  val v1: f(1) = f(1) // error
  |          ^
  |          Not found: type f
  |
  | longer explanation available when compiling with `-explain`
Blop blop
-- [E006] Not Found Error: tests/neg/applied_constructor_types.scala:9:10 ----------------------------------------------
9 |  val v2: id(1) = f(1) // error
  |          ^^
  |          Not found: type id - did you mean is?
  |
  | longer explanation available when compiling with `-explain`
Blop blop
-- [E006] Not Found Error: tests/neg/applied_constructor_types.scala:10:10 ---------------------------------------------
10 |  val v3: idDependent(1) = f(1) // error
   |          ^^^^^^^^^^^
   |          Not found: type idDependent
   |
   | longer explanation available when compiling with `-explain`
Blop blop
